@@ -54,4 +54,5 @@ BUGFIXES FROM BUGZILLA:
 041 ==> 375770 - Creating tag from left panel causes error.
 042 ==> 375591 - Digikam crash.
 043 ==> 375700 - Digikam freezes for a long time (I/O wait) if similarity range is set too low 
-044 ==>
+044 ==> 375573 - Don't reset/destroy context after deleting one image among a set of duplicates
+045 ==>
